# muzika_roboto

./: .gitignore  CONTRIBUTING.MD  LICENSE  README.MD  pyproject.toml  pytest.ini  requirements.txt  versel.json
api/: index.py
docs/: architecture_contract.md  module_contract.md
src/app/: main.py  settings.py
src/app/app_utils/: fsm.py  keyboards.py
src/app/bot/: main.py  response.py  settings.py  view_model.py
src/app/bot/core/: bot.py  (+2 more)
src/app/core/: paths.py
src/application/process/: del_user.py
src/core/: cli.py
src/core/context/: api.py  context.py  runtime.py
src/core/contracts/: constants.py  module.py  templates.py
src/core/error_handlers/: decorator.py  format.py  helpers.py  network.py
src/core/logging/: api.py  factory.py  format.py  runtime.py  storage.py
src/core/paths/: paths.py
src/core/response/: messages.py  modules_loader.py  response_data.py
src/core/utils/: chek.py  filesistem.py  network.py
src/domain/entities/: response.py  validate.py
src/domain/errors/: error_code.py
src/domain/repositories/: executor.py  genre.py  user.py
src/infrastructure/aiogram/: filters.py  legacy_response.py  messages.py  response.py
src/infrastructure/db/: db_helper.py  settings.py  uow.py
src/infrastructure/utils/: parsed.py
src/tests/: db_helper.py
tests/: conftest.py  test_create_module.py
tests/integration/process/: test_search_executor_by_name.py  test_update_album_year.py
tests/integration/use_cases/: test_create_executor.py  test_get_album_with_songs.py  test_get_executor_with_albums.py  test_get_or_create_user.py
(+207 files in other folders)
